--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.51.0",
+    "semantic-ui-react": "^2.1.2",
+    "styled-components": "^5.3.5",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "eslint": "8.15.0",
